# cpp-interview-prep

./: API_BEST_PRACTICES.md  CMakeLists.txt  debug_tests.sh  helloworld
include/: ApiException.h  HttpClient.h  HttpUtils.h
src/: HttpClient.cpp  HttpUtils.cpp  helloworld.cpp  sampleapi.cpp
tests/: ApiExceptionTest.cpp  HttpClientTest.cpp  HttpUtilsTest.cpp  SampleApiTest.cpp  TestMain.cpp
